--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "@sharmakshay/portfolio",
+  "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@10.15.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
